# pydantic-spark

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/pydantic_spark/: __main__.py  __main__.pyi  base.py  base.pyi  spark_to_pydantic.py  spark_to_pydantic.pyi
tests/: test_to_spark.py
