[tool.poetry]
name = "pydantic-spark"
version = "0.3.0"
description = "Converting pydantic classes to spark schemas"
authors = ["Peter van 't Hof' <peter.vanthof@godatadriven.com>"]

keywords = ["pydantic", "spark"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/godatadriven/pydantic-spark"
repository = "https://github.com/godatadriven/pydantic-spark"
include = [
    "LICENSE",
]


packages = [{ include = "pydantic_spark", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^1.4.0"

#spark
pyspark = {version=">=3.1.2,<3.3.0", optional=true}


[tool.poetry.extras]
spark = ["pyspark"]

[tool.poetry.dev-dependencies]
coverage= {version=  "^6.1.1", extras=["toml"]}
pytest= "7.0.1"
pytest-mock="3.6.1"
pyproject-flake8 ="^0.0.1a2"
isort ="^5.10.0"
pytest-cov= "^3.0.0"
mypy = "^0.961"
black = "^22.10.0"


[tool.poetry.scripts]
pydantic-spark = "pydantic_spark.__main__:root_main"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.pytest.ini_options]
addopts = "--junitxml=junit/report.xml"
testpaths = ["tests"]
markers = "requires_database: requires postgresql"

[tool.coverage.report]
omit = ["tests/*", ".venv/*"]
precision = 2
show_missing = true

[tool.coverage.run]
command_line = "-m pytest -v tests/"
omit = ["tests/*",".venv/*"]

[tool.flake8]
max-line-length = 180
extend-exclude = ["deploy", ".venv"]
extend-ignore = "E203"

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
files = "src/"
python_version = "3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
